# imapp

./: .gitignore  .gitmodules  README.md  TODO.md  imapp.cmake  premake_tb  shell.nix  tiki.lua
examples/hello_world/: AndroidManifest.xml  create_vs2017.bat  generate_vs2017.bat  premake5.lua
examples/hello_world/res/values/: strings.xml
examples/hello_world/src/: main.c  main.cpp
include/imapp/: imapp.h
resource_tool/: generate_vs2022_msdf.bat  generate_vs2022_sdl.bat  premake5.lua
resource_tool/assets/: resource_tool.iarespak  resource_tool_pak.iarespak
resource_tool/content/: resource_tool.iaresx  resource_tool.imappresx
resource_tool/content/appicon/: icon.psd
resource_tool/content/skins/: skin_solid_border2.psd
resource_tool/modules/file_dialog/: file_dialog.lua
resource_tool/modules/slow_compile/include/: file_dialog.h  thread.h
resource_tool/modules/slow_compile/src/: file_dialog.cpp  thread.cpp
resource_tool/src/: compiler.cpp  compiler.h  compiler_output.cpp  compiler_output.h  compiler_resource_data.cpp  compiler_resource_data.h  main.cpp  resource.cpp  resource.h  resource_compiler.cpp  resource_compiler.h  resource_helpers.cpp  resource_helpers.h  resource_package.cpp  resource_package.h  resource_theme.cpp  resource_theme.h  resource_tool.cpp  resource_tool.h  resource_toolbox_config.cpp  resource_toolbox_config.h  resource_types.h  resource_unicode.cpp  resource_unicode.h
samples/01_hello_world/: 01_hello_world.code-workspace  default.nix  generate_gmake_linux.sh  generate_gmake_linux_sdl.sh  generate_vs2022_android.bat  generate_vs2022_linux.bat  generate_vs2022_linux_sdl.bat  generate_vs2022_sdl.bat
samples/01_hello_world/src/: main.c
samples/02_images/: premake5.lua
samples/02_resources/: generate_vs2022_linux.bat  generate_vs2022_livepp.bat  premake5.lua
samples/02_resources/assets/: 02_resources.iarespak
samples/02_resources/content/: 02_resources.iaresx
samples/02_resources/src/: main.c
samples/03_android_studio/: .gitignore  build.gradle.kts  settings.gradle.kts
samples/03_android_studio/app/: build.gradle.kts
samples/03_android_studio/app/src/main/: AndroidManifest.xml
samples/03_android_studio/app/src/main/cpp/: CMakeLists.txt  main.c
samples/03_android_studio/app/src/main/res/values/: strings.xml
samples/03_android_studio/gradle/wrapper/: gradle-wrapper.properties
samples/04_emscripten/: 03_emscripten.code-workspace  CMakeLists.txt  CMakePresets.json  main.c  run-server.cmd
samples/05_controller/: premake5.lua
samples/05_controller/src/: main.c
samples/05_gamepad/src/: main.c
samples/06_multi_window/: premake5.lua
samples/06_multi_window/src/: main.c
samples/99_web/: main.c  web.vcxproj
samples/99_web_old/: web.vcxproj.filters
samples/hello_world/: generate_android.bat  premake5.lua
samples/hello_world/src/: main.c
src/: imapp.c  imapp_debug.c  imapp_debug.h  imapp_defines.h  imapp_drop_queue.c  imapp_drop_queue.h  imapp_event.h  imapp_event_queue.c  imapp_event_queue.h  imapp_helper.c  imapp_helper.h  imapp_image_storage.c  imapp_image_storage.h  imapp_input.c  imapp_input.h  imapp_internal.h  imapp_livepp.c  imapp_livepp.h  imapp_main.c  imapp_main.h  imapp_memory.c  imapp_memory.h  imapp_platform.c  imapp_platform.h  imapp_platform_android.c  imapp_platform_emscripten.c  imapp_platform_linux.c  imapp_platform_pthread.h  imapp_platform_sdl.c  imapp_platform_windows.c  imapp_private.h  imapp_renderer.c  imapp_renderer.h  imapp_renderer_opengl.c  imapp_renderer_vulkan.c  imapp_res_pak.c  imapp_res_pak.h  imapp_res_sys.c  imapp_res_sys.h  imapp_res_sys_internal.h  (+6 more)
src/android/: imapp_android_activity.c  imapp_android_activity.h  imapp_platform_android.c
src/nuklear/: imapp_nuklear.c
src/sdl/: imapp_platform_sdl.c
src/windows/: imapp_platform_windows.c
